--- a/packages/admin-dashboard/src/locales/en/common.json
+++ b/packages/admin-dashboard/src/locales/en/common.json
@@ -144,14 +144,14 @@
         "orderHistoryEntries_one": "Order history entry",
         "orderHistoryEntries_few": "Order history entries",
         "orderHistoryEntries_other": "Order history entries",
-        "fulfillmentLine_zero": "Fulfilment items",
+        "fulfillmentLine_zero": "Implementation position",
         "fulfillmentLine_one": "Implementation position",
         "fulfillmentLine_few": "Implementation items",
-        "fulfillmentLine_other": "Fulfilment items",
-        "fulfillmentLines_zero": "Fulfilment items",
+        "fulfillmentLine_other": "Implementation position",
+        "fulfillmentLines_zero": "Implementation position",
         "fulfillmentLines_one": "Implementation position",
         "fulfillmentLines_few": "Implementation items",
-        "fulfillmentLines_other": "Fulfilment items",
+        "fulfillmentLines_other": "Implementation position",
         "orderLine_zero": "Order items",
         "orderLine_one": "Order item",
         "orderLine_few": "Order items",
@@ -176,14 +176,14 @@
         "orders_one": "Order",
         "orders_few": "Orders",
         "orders_other": "Orders",
-        "orderableAsset_zero": "Orderable resources",
+        "orderableAsset_zero": "Available resources",
         "orderableAsset_one": "Orderable resource",
         "orderableAsset_few": "Orderable resource",
-        "orderableAsset_other": "Orderable resources",
-        "orderableAssest_zero": "Orderable resources",
+        "orderableAsset_other": "Available resources",
+        "orderableAssest_zero": "Available resources",
         "orderableAssets_one": "Orderable resource",
         "orderableAssets_few": "Orderable resource",
-        "orderableAssets_other": "Orderable resources",
+        "orderableAssets_other": "Available resources",
         "paymentMethod_zero": "Payment methods",
         "paymentMethod_one": "Payment method",
         "paymentMethod_few": "Payment methods",
@@ -272,14 +272,14 @@
         "regions_one": "Region",
         "regions_few": "Regions",
         "regions_other": "Regions",
-        "role_zero": "Roles",
+        "role_zero": "Ról",
         "role_one": "Role",
         "role_few": "Roles",
-        "role_other": "Roles",
-        "roles_zero": "Roles",
+        "role_other": "Ról",
+        "roles_zero": "Ról",
         "roles_one": "Role",
         "roles_few": "Roles",
-        "roles_other": "Roles",
+        "roles_other": "Ról",
         "seller_zero": "Vendors",
         "seller_one": "Vendor",
         "seller_few": "Vendors",
@@ -525,17 +525,17 @@
     "draft": "Project",
     "addingItems": "Adding elements",
     "arrangingPayment": "Organising payments",
-    "arrangingAdditionalPayment": "Determination of additional payment",
+    "arrangingAdditionalPayment": "Arranging an additional payment",
     "paymentAuthorized": "Authorised payment",
     "paymentSettled": "Cleared payment",
     "shipped": "Sent",
     "partiallyShipped": "Partially dispatched",
-    "partiallyFulfilled": "Partially implemented",
-    "partiallyDelivered": "Partially implemented",
+    "partiallyFulfilled": "Partially executed",
+    "partiallyDelivered": "Partially executed",
     "delivered": "Delivered",
     "cancelled": "Cancelled",
     "modifying": "Modification",
-    "inRealization": "In progress",
+    "inRealization": "In implementation",
     "logInHeader": "Log in to Deenruv",
     "userName": "User name",
     "password": "Password",
@@ -712,9 +712,9 @@
             "PartiallyDelivered": "Partially delivered",
             "Delivered": "Delivered",
             "Modifying": "Modification",
-            "ArrangingAdditionalPayment": "Determination of additional payment",
+            "ArrangingAdditionalPayment": "Arranging an additional payment",
             "Cancelled": "Cancelled",
-            "InRealization": "In progress",
+            "InRealization": "In implementation",
             "Regular": "Regular",
             "Aggregate": "Aggregate",
             "Seller": "Vendor"
@@ -881,8 +881,8 @@
         "zu": "Zulu"
     },
     "asset": {
-        "dialogTitle": "Select an asset",
-        "dialogButton": "Select an asset",
+        "dialogTitle": "Select resource",
+        "dialogButton": "Select resource",
         "dialogSearchPlaceholder": "Searching for resources by name",
         "tags": "Filter by tag",
         "perPageValue": "{{value}} per page",
@@ -892,8 +892,8 @@
         "description": "Uploading and managing resources that can be used in content"
     },
     "product": {
-        "dialogTitle": "Select product",
-        "dialogButton": "Select product",
+        "dialogTitle": "Select a product",
+        "dialogButton": "Select a product",
         "dialogSearchPlaceholder": "Product search by name",
         "perPageValue": "{{value}} per page",
         "confirmButton": "Add product",
@@ -934,12 +934,12 @@
         "asset": {
             "title": "List of assets",
             "description": "Select assets from the following list",
-            "pick": "Select an asset"
+            "pick": "Select resource"
         },
         "product": {
             "title": "List of products",
             "description": "Select products from the following list",
-            "pick": "Select product"
+            "pick": "Select a product"
         },
         "productvariant": {
             "title": "List of product variants",
@@ -1043,5 +1043,6 @@
         "emptyState": "No widgets enabled",
         "emptyStateDescription": "Your desktop is empty. Add widgets to find a wealth of information here.",
         "emptyStateDescription2": "Widgets help you visualise data and have quick access to key functions. Add the first one to get started."
-    }
+    },
+    "goBackToList": "Back to list"
 }
