--- a/packages/admin-dashboard/src/locales/en/orders.json
+++ b/packages/admin-dashboard/src/locales/en/orders.json
@@ -1,5 +1,5 @@
 {
-    "add": "Add order",
+    "add": "Add your order",
     "selectPaymentMethod": "Select a payment method",
     "enterTransactionId": "Enter transaction id",
     "applyChanges": "Apply changes",
@@ -33,11 +33,11 @@
         "mistake": "Mistake"
     },
     "deleteDraft": {
-        "button": "Delete draft version",
+        "button": "Delete draft",
         "title": "Are you sure?",
         "descriptionDraft": "The following draft orders will be permanently deleted:",
         "descriptionOrder": "The following orders will be cancelled:",
-        "confirm": "Delete draft version",
+        "confirm": "Delete draft",
         "cancel": "Cancel"
     },
     "searchProduct": {
@@ -46,7 +46,7 @@
         "name": "Name",
         "price": "Price",
         "action": "Operation",
-        "placeholder": "Enter to search for products..."
+        "placeholder": "Type to search for products..."
     },
     "forms": {
         "create": "Create order",
@@ -76,7 +76,7 @@
         "viewPayment": "Display payment details",
         "viewOrder": "View order",
         "paymentMethod": "Payment type",
-        "add": "Add order",
+        "add": "Add your order",
         "applyChanges": "Apply changes",
         "reviewChanges": "Review changes",
         "note": "Add note",
@@ -100,11 +100,11 @@
         "total": "Total",
         "totalItems": "Total price of {{value}} products",
         "deleteDraft": {
-            "button": "Delete draft version",
+            "button": "Delete draft",
             "title": "Are you sure?",
             "descriptionDraft": "The following draft orders will be permanently deleted:",
             "descriptionOrder": "The following orders will be cancelled:",
-            "confirm": "Delete draft version",
+            "confirm": "Delete draft",
             "cancel": "Cancel"
         },
         "searchProduct": {
@@ -113,7 +113,7 @@
             "name": "Name",
             "price": "Price",
             "action": "Operation",
-            "placeholder": "Enter to search for products..."
+            "placeholder": "Type to search for products..."
         },
         "forms": {
             "create": "Create order",
@@ -182,7 +182,7 @@
             "updateAddItemToast": "Item successfully added to the order",
             "updateQuantityItemToast": "Item successfully changed to order quantity",
             "searchHeader": "Product",
-            "searchPlaceholder": "Enter to search for products...",
+            "searchPlaceholder": "Type to search for products...",
             "product": "Product",
             "slug": "Short name (slug)",
             "preview": "Preview",
@@ -314,8 +314,8 @@
             "inputStreetPlaceholder": "Street Line 1",
             "inputStreet2Label": "Street Line 2",
             "inputStreet2Placeholder": "Street Line 2",
-            "inputTaxLabel": "Company tax identifier",
-            "inputTaxPlaceholder": "Company tax identifier"
+            "inputTaxLabel": "Company tax ID",
+            "inputTaxPlaceholder": "Company tax ID"
         },
         "selectShipmentMethod": {
             "noLines": "At least one item is required",
@@ -323,16 +323,16 @@
             "cardDescription": "Select shipping method",
             "noSelected": "No shipping method selected.",
             "noSelectedTip": "Please add products before selecting a shipping method.",
-            "buttonLabel": "Set shipping method",
+            "buttonLabel": "Set your shipping method",
             "close": "Close",
             "save": "Save",
-            "setMethodTitle": "Set shipping method",
+            "setMethodTitle": "Set your shipping method",
             "setMethodDescription": "Select shipping method",
             "shippingAdded": "Shipping method has been successfully added",
             "code": "Code:",
             "price": "Price:",
             "method": "Method:",
-            "addMethod": "Add shipping method"
+            "addMethod": "Add a shipping method"
         },
         "inputs": {
             "pickDate": "Select date"
@@ -408,7 +408,7 @@
         "updateAddItemToast": "Item successfully added to the order",
         "updateQuantityItemToast": "Item successfully changed to order quantity",
         "searchHeader": "Product",
-        "searchPlaceholder": "Enter to search for products...",
+        "searchPlaceholder": "Type to search for products...",
         "product": "Product",
         "slug": "Short name (slug)",
         "preview": "Preview",
@@ -540,8 +540,8 @@
         "inputStreetPlaceholder": "Street Line 1",
         "inputStreet2Label": "Street Line 2",
         "inputStreet2Placeholder": "Street Line 2",
-        "inputTaxLabel": "Company tax identifier",
-        "inputTaxPlaceholder": "Company tax identifier"
+        "inputTaxLabel": "Company tax ID",
+        "inputTaxPlaceholder": "Company tax ID"
     },
     "selectShipmentMethod": {
         "noLines": "At least one item is required",
@@ -549,16 +549,16 @@
         "cardDescription": "Select shipping method",
         "noSelected": "No shipping method selected.",
         "noSelectedTip": "Please add products before selecting a shipping method.",
-        "buttonLabel": "Set shipping method",
+        "buttonLabel": "Set your shipping method",
         "close": "Close",
         "save": "Save",
-        "setMethodTitle": "Set shipping method",
+        "setMethodTitle": "Set your shipping method",
         "setMethodDescription": "Select shipping method",
         "shippingAdded": "Shipping method has been successfully added",
         "code": "Code:",
         "price": "Price:",
         "method": "Method:",
-        "addMethod": "Add shipping method"
+        "addMethod": "Add a shipping method"
     },
     "inputs": {
         "pickDate": "Select date"
