facetValues filter for product and product variant tables, fixed stock filters on productVariant, changed stock badges styles

--- a/packages/admin-dashboard/src/locales/en/products.json
+++ b/packages/admin-dashboard/src/locales/en/products.json
@@ -73,7 +73,9 @@
         "delete": "Delete product",
         "allVariantsStock": "Stock of all variants",
         "allocated": "allocated",
-        "stock": "Shares"
+        "stockOnHand": "Stock on hand",
+        "stockAllocated": "Stock allocated",
+        "stock": "Stock"
     },
     "deleteProductDialog": {
         "button": "Delete product",
