--- a/packages/admin-dashboard/src/locales/pl/products.json
+++ b/packages/admin-dashboard/src/locales/pl/products.json
@@ -73,7 +73,9 @@
         "delete": "Usuń produkt",
         "allVariantsStock": "Zapasy wszystkich wariantów",
         "allocated": "przydzielony",
-        "stock": "Akcje"
+        "stockOnHand": "Stan magazynowy",
+        "stockAllocated": "Zablokowany stan magazynowy",
+        "stock": "Stan magazynowy"
     },
     "deleteProductDialog": {
         "button": "Usuń produkt",
