--- a/packages/admin-dashboard/src/locales/pl/table.json
+++ b/packages/admin-dashboard/src/locales/pl/table.json
@@ -77,21 +77,21 @@
     "cancel": "Anuluj"
   },
   "operators": {
-    "eq": "Równa się",
-    "in": "W",
-    "notIn": "Nie w",
-    "isNull": "Is null",
-    "notEq": "Nie jest równa",
-    "contains": "Zawiera",
-    "notContains": "Nie zawiera",
-    "before": "Przed",
-    "regex": "Pasuje do wyrażenia regularnego",
-    "after": "Po",
-    "between": "Pomiędzy",
-    "lt": "Niższy niż",
-    "lte": "Niższy lub równy",
-    "gt": "Większy niż",
-    "gte": "Większy lub równy"
+    "eq": "równa się",
+    "in": "w",
+    "notIn": "nie w",
+    "isNull": "is null",
+    "notEq": "nie jest równa",
+    "contains": "zawiera",
+    "notContains": "nie zawiera",
+    "before": "przed",
+    "regex": "pasuje do wyrażenia regularnego",
+    "after": "po",
+    "between": "pomiędzy",
+    "lt": "niższy niż",
+    "lte": "niższy lub równy",
+    "gt": "większy niż",
+    "gte": "większy lub równy"
   },
   "placeholders": {
     "columnsDropdown": "Wybierz kolumny",
@@ -100,11 +100,12 @@
   },
   "columns": {
     "id": "ID",
-    "createdAt": "Utworzona w",
-    "updatedAt": "Zaktualizowano o",
+    "createdAt": "Data utworzenia",
+    "updatedAt": "Ostatnia aktualizacja",
     "featuredAsset": "Aktywa",
     "name": "Nazwa",
     "slug": "Skrócona nazwa (slug)",
+    "customerLastName": "Nazwisko klienta",
     "enabled": "Włączone",
     "sku": "SKU",
     "description": "Opis",
@@ -117,13 +118,13 @@
     "payments": "Płatności",
     "shippingAddress": "Adres wysyłki",
     "customer": "Klient",
-    "state": "Stan",
-    "totalWithTax": "Razem",
-    "code": "Kod",
-    "total": "Razem",
+    "state": "Status",
+    "totalWithTax": "Kwota zamówienia z podatkiem",
+    "code": "Kod zamówienia",
+    "total": "Kwota zamówienia",
     "type": "Typ",
     "shipping": "Dostawa",
-    "orderPlacedAt": "Złożony o",
+    "orderPlacedAt": "Data złożenia",
     "firstName": "Imię",
     "lastName": "Nazwisko",
     "emailAddress": "Email",
@@ -169,7 +170,7 @@
     "searchFields": "Wyszukaj",
     "noFiltersApplied": "Nie zastosowano żadnych filtrów",
     "emptyState": "Dodaj filtry, aby zawęzić wyniki.",
-    "operatorPlaceholder": "Operator wyboru"
+    "operatorPlaceholder": "operator wyboru"
   },
   "entities": {
     "administrator": "administrator",
