--- a/packages/admin-dashboard/src/locales/pl/products.json
+++ b/packages/admin-dashboard/src/locales/pl/products.json
@@ -124,6 +124,7 @@
         "noFeaturedAsset": "Nie ustalono",
         "noAssets": "Nie ma jeszcze żadnych aktywów",
         "setAsFeatured": "Ustaw jako polecane",
+        "editAsset": "Edytuj zdjęcie",
         "removeAsset": "Usuń zasób",
         "usedForColorsDesc": "Użyj tego atrybutu dla facetów, którzy są kolorami",
         "colorsCollectionDesc": "Użyj tego dla ścieżek produktu w KOLORZE (BLAT/CORPUS)",
