--- a/packages/admin-dashboard/src/locales/en/common.json
+++ b/packages/admin-dashboard/src/locales/en/common.json
@@ -9,6 +9,15 @@
   "Nie zatwierdzono akcji": "Action not confirmed",
   "Nie udało się przypisać elementów z kanału": "Failed to assign items from channel",
   "Nie udało się usunąć elementów z kanału": "Failed to remove items from channel",
+  "Zatwierdź": "Confirm",
+  "Anuluj": "Cancel",
+  "Wybierz produkt": "Choose product",
+  "Wybierz wariant": "Choose variant",
+  "Wybierz produkty": "Choose products",
+  "Wybierz warianty": "Choose variants",
+  "Szukaj": "Search...",
+  "Brak produktów": "No products found",
+  "Zaznaczonych": "selected",
   "title": "{{name}} - Deenruv",
   "table": {
     "id": "ID",
