--- a/packages/admin-dashboard/src/locales/pl/common.json
+++ b/packages/admin-dashboard/src/locales/pl/common.json
@@ -8,6 +8,15 @@
   "Nie zatwierdzono akcji": "Nie zatwierdzono akcji",
   "Nie udało się przypisać elementów z kanału": "Nie udało się przypisać elementów z kanału",
   "Nie udało się usunąć elementów z kanału": "Nie udało się usunąć elementów z kanału",
+  "Zatwierdź": "Zatwierdź",
+  "Anuluj": "Anuluj",
+  "Wybierz produkt": "Wybierz produkt",
+  "Wybierz wariant": "Wybierz wariant",
+  "Wybierz produkty": "Wybierz produkty",
+  "Wybierz warianty": "Wybierz warianty",
+  "Szukaj": "Wpisz frazę do wyszukania...",
+  "Brak produktów": "Brak produktów",
+  "Zaznaczonych": "zaznaczonych",
   "title": "{{route}} - {{app}}",
   "table": {
     "id": "ID",
